--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,160 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --black: #150605;
+  --red: #EA453C;
+  --blueish: #145a75;
+  --light-blue: #EFFBFE;
+  --blue: #ACE6EC;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html, body {
+  font-family: 'Oswald', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #d8dee0;
 }
+
+main.photos {
+  padding: 10px;
+  display: grid;
+  grid-gap: 2px;
+  grid-auto-rows: 100px;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  grid-auto-flow: dense;
+}
+
+main.cart-page {
+  padding: 10px;
+}
+
+.cart-page > h1 {
+  text-align: center;
+}
+
+.cart-page .total-cost {
+  text-align: right;
+  font-size: 1.3em;
+}
+
+.cart-page div.order-button {
+  display: flex;
+  justify-content: center;
+}
+
+div.order-button > button {
+  background-color: rgb(210, 211, 211);
+  border-color: var(--black);
+  cursor: pointer;
+  padding: 15px;
+  transition: all .2s ease-in-out;
+}
+
+div.order-button > button:focus {
+  outline: none;
+}
+
+div.order-button > button:disabled {
+  border-color: lightgray;
+}
+
+.cart-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px 0;
+}
+
+.cart-item img {
+  margin-right: auto;
+  margin-left: 10px;   
+}
+
+img.image-grid {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.image-container {
+  position: relative;
+}
+
+.favorite {
+  color: var(--red);
+  font-size: 1.2rem;
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  cursor: pointer;
+}
+.ri-image-2-line {
+  font-size: 1.9em;
+  cursor: pointer;
+
+}
+.img-div{
+  background-color: rgb(2, 28, 39);
+  box-shadow: 0 0 8px 8px rgb(1, 40, 56) inset;
+  
+}
+ .home{
+   width : 96%;
+   
+ }
+ p{
+   justify-content: center;
+   margin : 55px;
+ }
+
+
+
+.ri-heart-fill {
+  opacity: .9;
+}
+
+.ri-delete-bin-line, .ri-delete-bin-fill {
+  font-size: 1.3em;
+  cursor: pointer;
+}
+
+.cart {
+  color: var(--blue);
+  font-size: 1.2rem;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  cursor: pointer;
+}
+
+
+.wide {
+  grid-column: span 2;
+}
+
+.tall {
+  grid-row: span 2;
+}
+
+.big {
+  grid-column: span 4;
+  grid-row: span 4;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--blueish);
+  color: var(--light-blue);
+  padding: 0 10px;
+  -webkit-box-shadow: 0px 2px 10px -5px rgba(21,6,5,1);
+  -moz-box-shadow: 0px 2px 10px -5px rgba(21,6,5,1);
+  box-shadow: 0px 2px 10px -5px rgba(21,6,5,1);
+}
+
+a {
+  text-decoration: none;
+}
+
+a:visited { color: var(--light-blue); }
+a:hover { color: var(--light-blue); }
+a:active { color: var(--light-blue); }
